k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-izaias
  namespace: aluno-izaias
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: app-izaias
  sessionAffinity: None
  type: ClusterIP
