k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-izaias
  namespace: aluno-izaias
spec:
  rules:
  - host: app-izaias-izaias.aula.jac.bsb.br
    http:
      paths:
      - backend:
          service:
            name: service-app-izaias
            port: 
              number: 5000
        pathType: ImplementationSpecific
